--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@myooken/third-party-license-output-nodemodules",
   "version": "0.1.0",
+  "license": "MIT",
   "type": "module",
   "exports": {
     ".": "./src/core.js"
