--- a/package.json
+++ b/package.json
@@ -1,10 +1,9 @@
 {
-  "name": "@myooken/third-party-license-output-nodemodules",
+  "name": "@myooken/license-output",
   "version": "0.1.0",
   "description": "Generate THIRD-PARTY-NOTICES markdown by scanning licenses in node_modules.",
   "license": "MIT",
   "type": "module",
-
   "repository": {
     "type": "git",
     "url": "git+https://github.com/myooken/collect-node-modules-licenses.git"
@@ -22,14 +21,17 @@
     "compliance",
     "cli"
   ],
-
   "exports": {
     ".": "./src/core.js"
   },
   "bin": {
     "third-party-notices": "./src/cli.js"
   },
-  "files": ["src", "README.md", "LICENSE"],
+  "files": [
+    "src",
+    "README.md",
+    "LICENSE"
+  ],
   "engines": {
     "node": ">=18"
   }
